# MorFlash

./: Cargo.toml  LICENSE  README.md
assets/sfx/: custom_sfx.txt
decks/: new_deck.json  new_deck.mflash
docs/: mflash_spec.md
progress/: animals-progress.json  french-basics-progress.json
src/: lib.rs  model.rs  srs.rs
src/gui/: app.rs  deck_list_screen.rs  menu_theme.rs  mod.rs  sound.rs  study_screen.rs  theme.rs
src/gui/app/: deck_ops.rs  mod.rs  review_ops.rs
src/gui/app/deck_ops/: builder_ops.rs  export_ops.rs  import_ops.rs  mod.rs  review_ops.rs  study_ops.rs
src/gui/app/screens/: completion_screen.rs  controls_screen.rs  deck_builder_screen.rs  deck_list_screen.rs  main_menu_screen.rs  mod.rs  options_screen.rs  study_screen.rs
src/gui/app/screens/options_screen/: completion_options.rs  deck_builder_options.rs  global_options.rs  main_menu_options.rs  mod.rs  state.rs  study_options.rs
src/gui/app/widgets/: completion_widgets.rs  main_menu_widgets.rs  mod.rs  shared.rs  study_widgets.rs
src/gui/theme/: deck_builder.rs  mod.rs  shared.rs
src/import/: apkg.rs  csv.rs  json.rs  markdown.rs  mod.rs  txt.rs  xml.rs
src/srs/: mflash.rs  mod.rs
