[package]
name = "morflash-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "morflash_core"
path = "src/lib.rs"

[[bin]]
name = "morflash-gui"
path = "src/bin/morflash-gui.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
eframe = "0.28"
egui_extras = { version = "0.28", features = ["svg"] }
rand = "0.8"
rfd = "0.14"
rodio = { version = "0.17", features = ["vorbis"] }
image = { version = "0.25", default-features = false, features = ["png"] }

